--- a/package.json
+++ b/package.json
@@ -9,14 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "18.14.6",
+    "@next/font": "^13.2.4",
+    "@types/node": "18.15.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "clsx": "^1.2.1",
     "eslint": "8.35.0",
-    "eslint-config-next": "13.2.3",
-    "next": "13.2.3",
+    "eslint-config-next": "13.2.4",
+    "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "firebase": "^9.17.2",
+    "postcss": "^8.4.21",
+    "recoil": "^0.7.7",
+    "tailwindcss": "^3.2.7"
   }
 }
