--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.8.0",
+    "safe-json-stringify": "^1.2.0",
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@types/safe-json-stringify": "^1.1.2",
     "autoprefixer": "^10.4.14",
     "firebase": "^9.17.2",
     "postcss": "^8.4.21",
