--- a/package.json
+++ b/package.json
@@ -15,10 +15,9 @@
     "@types/react-dom": "18.0.11",
     "clsx": "^1.2.1",
     "eslint": "8.35.0",
-    "eslint-config-next": "13.2.4",
-    "next": "13.2.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^13.4.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.8.0",
     "safe-json-stringify": "^1.2.0",
@@ -27,6 +26,7 @@
   "devDependencies": {
     "@types/safe-json-stringify": "^1.1.2",
     "autoprefixer": "^10.4.14",
+    "eslint-config-next": "^13.4.3",
     "firebase": "^9.17.2",
     "postcss": "^8.4.21",
     "recoil": "^0.7.7",
